# dropsync-rs

./: Cargo.toml  README.md
src/: ask.rs  config.rs  dir_state.rs  dropbox.rs  explorer.rs  file_filter.rs  main.rs  util.rs
test-data/: sample_config.toml
test-data/dirstate_test/subdir/: shoop
