[package]
name = "dropsync"
version = "1.6.0"
authors = ["Atul Varma <varmaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
dirs = "2.0"
gethostname = "0.2.1"
rprompt = "1.0.5"
docopt = "1"
sysinfo = "0.20"
serde = { version = "1", features = ["derive"] }
glob = "0.3.0"
